# API-challenges

./: README.md  pyproject.toml  run.py
flask_apis/todo-api/: models.py
flask_apis/todo-api/templates/: index.html
todo-api/: app.py
todo-api/sessions/: sessions.json
todo-api/tasks/: tasks.json
todo-api/templates/: index2.html
