[tool.poetry]
name = "api-challenges"
version = "0.1.0"
description = "A hybrid Flask and FastAPI project"
authors = ["Frank Njoroge <frank.projects001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3"
fastapi = "^0.110"
uvicorn = "^0.29"
gunicorn = "^21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
